--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cross-fetch": "^3.0.1",
     "deep-freeze": "0.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -10,6 +12,7 @@
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -28,7 +31,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0"
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-polyfill": "^6.26.0"
   },
   "babel": {
     "plugins": [
