--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.18.0",
     "cross-fetch": "^3.0.1",
     "deep-freeze": "0.0.1",
-    "react": "^16.8.2",
+    "react": "^16.8.3",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
@@ -34,7 +34,10 @@
   ],
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5"
   },
   "babel": {
     "plugins": [
