--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.18.0",
     "cross-fetch": "^3.0.1",
     "deep-freeze": "0.0.1",
+    "material-design-icons": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-spinners-kit": "^1.8.0",
     "redux": "^4.0.1",
