--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cross-fetch": "^3.0.1",
     "deep-freeze": "0.0.1",
     "material-design-icons": "^3.0.1",
+    "radium": "^0.25.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
@@ -20,7 +21,7 @@
     "typescript": "^3.3.3333"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start REACT_APP",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +38,7 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "babel-polyfill": "^6.26.0",
+    "dotenv": "^6.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5"
