--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "2.1.5",
     "react-spinners-kit": "^1.8.0",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^2.4.1",
